--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: clean-architecture
   datasource:
-    url: jdbc:h2:mem:hi-namaste
+    url: jdbc:h2:mem:clean-architecture
     username: sa
     password:
     driver-class-name: org.h2.Driver
